--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
-  text-align: center;
+body {
+	background-color: blue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.notes {
+	border-top-left-radius: 42px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dot {
+	height: 6px;
+	width: 6px;
+	margin-left: 8px;
+	margin-right: 3px;
+	margin-top: 2px;
+	background-color: rgb(91, 92, 91);
+	border-radius: 50%;
+	display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.review-text {
+	background: red;
+	color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.info {
+	color: #8c8b9a;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dot-red {
+	background-color: red !important;
+	height: 6px;
+	width: 6px;
+	margin-left: 8px;
+	margin-right: 3px;
+	margin-top: 2px;
+	border-radius: 50%;
+	display: inline-block;
+}
+
+.overview {
+	color: red;
+}
+
+@keyframes click-wave {
+	0% {
+		height: 40px;
+		width: 40px;
+		opacity: 0.15;
+		position: relative;
+	}
+
+	100% {
+		height: 200px;
+		width: 200px;
+		margin-left: -80px;
+		margin-top: -80px;
+		opacity: 0;
+	}
+}
+
+.option-input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	position: relative;
+	top: 10.3px;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 30px;
+	width: 30px;
+	transition: all 0.15s ease-out 0s;
+	background: #cbd1d8;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	margin-right: 0.5rem;
+	outline: none;
+	z-index: 1000;
+}
+
+.option-input:hover {
+	background: #9faab7;
+}
+
+.option-input:checked {
+	background: red;
+}
+
+.option-input:checked::before {
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	content: "\f111";
+	font-family: "Font Awesome 5 Free";
+	display: inline-block;
+	font-size: 16.7px;
+	text-align: center;
+	line-height: 30px;
+}
+
+.option-input:checked::after {
+	-webkit-animation: click-wave 0.25s;
+	-moz-animation: click-wave 0.25s;
+	animation: click-wave 0.25s;
+	background: red;
+	content: "";
+	display: block;
+	position: relative;
+	z-index: 100;
+}
+
+.option-input.radio {
+	border-radius: 50%;
+}
+
+.option-input.radio::after {
+	border-radius: 50%;
+}
+
+.completed {
+	color: gray;
+	text-decoration: line-through;
+}
+
+.line-text {
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid #eee;
+	line-height: 0.1em;
+	margin: 10px 0 20px;
+}
+
+.line-text span {
+	background: #fff;
+	padding: 0 10px;
+	color: #212529;
 }
